syntax = "proto3";

package bonder.auth;

message User {
	string id = 1;
	string user_name = 2;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (User);
}

message GetUserRequest {
	string user_name = 1;
}